# ntk

./: .gitignore  README.md  Testing.ipynb  aux_collect_names_scraper.py  aux_create_consolidated_name_list_files.py  aux_functions.py  aux_generate_stortingsnavn.py  aux_picklemaker_NOLoader.py  genderPredictor_no.py  name2gender.py  ntk.py  praenomen2genus.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: Utnes_versteuropeiske_navneliste.txt  gammel_list_guttenavn.txt  guttenavn.txt  guttenavn_fra_norskenavn.txt  guttenavn_fra_ssb.txt  jentenavn.txt  jentenavn_fra_norskenavn.txt  jentenavn_fra_ssb.txt  no_names.pickle  original_no_names.pickle  ssb_Guttenavn_alfabetisk_2005-2014.csv  ssb_Jentenavn_alfabetisk_2005-2014.csv
data/models/: _pickled_pipe.pkl  automl_ExtraTreesClassifier_123_s_acs_86_74.pkl  automl_LGBMClassifier_120_s.pkl  automl_LogisticRegression_10800_s_acs_85_77.pkl  automl_XGBClassifier_60min.pkl
data/stortings-navn/: 21-11-04.pickle
praenomen2genus/: aux_picklemaker_NOLoader.py  praenomen2genus.py
praenomen2genus/data/: har_norsk_navnedag.csv  jentenavn.txt  personer_i_norron_mytologi.csv  stortingsrepresentantnavn.csv
src/: __init__.py  aux_collect_names_scraper.py  aux_create_consolidated_name_list_files.py  aux_functions.py  aux_generate_stortingsnavn.py  aux_picklemaker_NOLoader.py  ntk.py
tests/: context.py  test_dobbeltkjønn.py  test_format.py  test_menn.py  test_nbl.py  test_stortinget.py  test_women.py
tests/explorations/: Testing_new_ml_autosklearn.ipynb  Testing_new_ml_flaml.ipynb  Testing_new_ml_pipeline.ipynb  Testing_new_ml_tpot.ipynb  Testing_old_nltk_classifier.ipynb  tpot_exported_pipeline.py
