[metadata]
name = ntk
description = Navn til kjønn. Ola --> Mann, Kari -> Kvinne.
author = Eirik Stavelin
license = MIT
;version=0.3.1
version = attr: ntk.__version__
;license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ntk
;install_requires =
;    requests>=2
;python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
;    tox>=3.24

[options.package_data]
ntk = py.typed

[flake8]
max-line-length = 160

#name = ntk
#[metadata]
#author= Eirik Stavelin
## version=0.3.0
#packages=find_packages(),  # ['towelstuff',],
## include_package_data=True, # virker ikke
#package_data={'ntk': ['data/*.txt', 'data/*.pickle']},
#url='https://github.com/eiriks/ntk',
#license='MIT',
#long_description=open('README.md').read(),
#classifiers =
#    Programming Language :: Python :: 3 
#
## Indicate who your project is intended for
#'Intended Audience :: Developers',
#'Intended Audience :: Science/Research',
#
## Pick your license as you wish (should match "license" above)
#'License :: OSI Approved :: MIT License',
#
## Specify the Python versions you support here. In particular, ensure
## that you indicate whether you support Python 2, Python 3 or both.
#'Programming Language :: Python :: 3.5',
#],